changes to plotting and color scheme

--- a/test.ipynb
+++ b/test.ipynb
@@ -183,6 +183,89 @@
     "plt.title('HDBSCAN Clustering')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No common files found between the directories.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Paths to the directories\n",
+    "train_dir = '/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/train'\n",
+    "test_dir = '/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/test'\n",
+    "\n",
+    "def list_files(directory):\n",
+    "    \"\"\"List all files in a given directory.\"\"\"\n",
+    "    return [file for file in os.listdir(directory) if os.path.isfile(os.path.join(directory, file))]\n",
+    "\n",
+    "def find_common_files(train_dir, test_dir):\n",
+    "    \"\"\"Find common files between two directories.\"\"\"\n",
+    "    # List all files in each directory\n",
+    "    train_files = set(list_files(train_dir))\n",
+    "    test_files = set(list_files(test_dir))\n",
+    "\n",
+    "    # Find common files\n",
+    "    common_files = train_files.intersection(test_files)\n",
+    "\n",
+    "    if common_files:\n",
+    "        print(\"Common files found:\", common_files)\n",
+    "    else:\n",
+    "        print(\"No common files found between the directories.\")\n",
+    "\n",
+    "# Check for common files\n",
+    "find_common_files(train_dir, test_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "def copy_files_to_folder(source_folders, destination_folder):\n",
+    "    # Ensure the destination folder exists\n",
+    "    if not os.path.exists(destination_folder):\n",
+    "        os.makedirs(destination_folder)\n",
+    "    \n",
+    "    for source_folder in source_folders:\n",
+    "        # Check if the source folder exists\n",
+    "        if not os.path.exists(source_folder):\n",
+    "            print(f\"Source folder {source_folder} does not exist. Skipping.\")\n",
+    "            continue\n",
+    "        \n",
+    "        # Iterate through all files in the source folder\n",
+    "        for filename in os.listdir(source_folder):\n",
+    "            source_file = os.path.join(source_folder, filename)\n",
+    "            destination_file = os.path.join(destination_folder, filename)\n",
+    "\n",
+    "            # Check if it's a file (and not a directory)\n",
+    "            if os.path.isfile(source_file):\n",
+    "                # Copy the file to the destination folder\n",
+    "                shutil.copy2(source_file, destination_file)\n",
+    "                print(f\"Copied {source_file} to {destination_file}\")\n",
+    "\n",
+    "# List of source folders\n",
+    "source_folders = ['/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/songdetector_test', '/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/songdetector_train']\n",
+    "\n",
+    "# Destination folder\n",
+    "destination_folder = '/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/sort_these'\n",
+    "\n",
+    "# Execute the function\n",
+    "copy_files_to_folder(source_folders, destination_folder)\n"
+   ]
   }
  ],
  "metadata": {
