work on HDBSCAN labels post processing

--- a/notebooks/tweetyBERT_FER.ipynb
+++ b/notebooks/tweetyBERT_FER.ipynb
@@ -137,6 +137,14 @@
       "File \u001b[0;32m~/Documents/projects/tweety_bert_paper/src/data_class.py:115\u001b[0m, in \u001b[0;36mCollateFunction.__call__\u001b[0;34m(self, batch)\u001b[0m\n\u001b[1;32m    111\u001b[0m     ground_truth_labels_processed\u001b[39m.\u001b[39mappend(ground_truth_label)\n\u001b[1;32m    113\u001b[0m \u001b[39m# Stack tensors along a new dimension to match the BERT input size.\u001b[39;00m\n\u001b[1;32m    114\u001b[0m \u001b[39m# You might need to adjust dimensions based on your exact use case.\u001b[39;00m\n\u001b[0;32m--> 115\u001b[0m spectograms \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mstack(spectograms_processed, dim\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[1;32m    116\u001b[0m psuedo_labels \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mstack(psuedo_labels_processed, dim\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[1;32m    117\u001b[0m ground_truth_labels \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mstack(ground_truth_labels_processed, dim\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
