--- a/notebooks/markovian_calc.ipynb
+++ b/notebooks/markovian_calc.ipynb
@@ -69,33 +69,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The first 1000 elements have been saved to 'temp.txt'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "# Load the .npy file\n",
     "f = np.load(\"/home/george-vengrovski/Documents/projects/tweety_bert_paper/hdbscanlabels.npy\")\n",
     "\n",
-    "# Slice the first 1000 elements\n",
-    "first_1000_elements = f\n",
+    "# # Slice the first 1000 elements\n",
+    "# first_1000_elements = f\n",
     "\n",
-    "# Save the sliced array to a text file named 'temp.txt'\n",
-    "with open('temp.txt', 'w') as file:\n",
-    "    for item in first_1000_elements:\n",
-    "        file.write(f\"{item},\")\n",
+    "# # Save the sliced array to a text file named 'temp.txt'\n",
+    "# with open('temp.txt', 'w') as file:\n",
+    "#     for item in first_1000_elements:\n",
+    "#         file.write(f\"{item},\")\n",
     "\n",
-    "# Confirmation message\n",
-    "print(\"The first 1000 elements have been saved to 'temp.txt'.\")\n"
+    "# # Confirmation message\n",
+    "# print(\"The first 1000 elements have been saved to 'temp.txt'.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "def majority_vote(data):\n",
+    "    # Function to find the majority element in a window\n",
+    "    def find_majority(window):\n",
+    "        count = Counter(window)\n",
+    "        majority = max(count.values())\n",
+    "        for num, freq in count.items():\n",
+    "            if freq == majority:\n",
+    "                return num\n",
+    "        return window[1]  # Return the middle element if no majority found\n",
+    "\n",
+    "    # Ensure the input data is in list form\n",
+    "    if isinstance(data, str):\n",
+    "        data = [int(x) for x in data.split(',') if x.strip().isdigit()]\n",
+    "\n",
+    "    # Initialize the output array with a padding at the beginning\n",
+    "    output = [data[0]]  # Pad with the first element\n",
+    "\n",
+    "    # Apply the majority vote on each window\n",
+    "    for i in range(1, len(data) - 1):  # Start from 1 and end at len(data) - 1 to avoid index out of range\n",
+    "        window = data[i-1:i+2]  # Define the window with size 3\n",
+    "        output.append(find_majority(window))\n",
+    "\n",
+    "    # Pad the output array at the end to match the input array size\n",
+    "    output.append(data[-1])\n",
+    "\n",
+    "    return output\n",
+    "\n",
+    "\n",
+    "majority_vote_arr = majority_vote(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def syllable_to_phrase_labels(arr, silence=-1):\n",
+    "    new_arr = np.array(arr, dtype=int)\n",
+    "    current_syllable = None\n",
+    "    start_of_phrase_index = None\n",
+    "    first_non_silence_label = None  # To track the first non-silence syllable\n",
+    "\n",
+    "    for i, value in enumerate(new_arr):\n",
+    "        if value != silence and value != current_syllable:\n",
+    "            if start_of_phrase_index is not None:\n",
+    "                new_arr[start_of_phrase_index:i] = current_syllable\n",
+    "            current_syllable = value\n",
+    "            start_of_phrase_index = i\n",
+    "            \n",
+    "            if first_non_silence_label is None:  # Found the first non-silence label\n",
+    "                first_non_silence_label = value\n",
+    "\n",
+    "    if start_of_phrase_index is not None:\n",
+    "        new_arr[start_of_phrase_index:] = current_syllable\n",
+    "\n",
+    "    # Replace the initial silence with the first non-silence syllable label\n",
+    "    if new_arr[0] == silence and first_non_silence_label is not None:\n",
+    "        for i in range(len(new_arr)):\n",
+    "            if new_arr[i] != silence:\n",
+    "                break\n",
+    "            new_arr[i] = first_non_silence_label\n",
+    "\n",
+    "    return new_arr\n",
+    "\n",
+    "def reduce_phrases(arr, remove_silence=True):\n",
+    "    current_element = arr[0]\n",
+    "    reduced_list = [] \n",
+    "\n",
+    "    for i, value in enumerate(arr):\n",
+    "        if value != current_element:\n",
+    "            reduced_list.append(current_element)\n",
+    "            current_element = value \n",
+    "\n",
+    "        # append last phrase\n",
+    "        if i == len(arr) - 1:\n",
+    "            reduced_list.append(current_element)\n",
+    "\n",
+    "    if remove_silence == True:\n",
+    "        reduced_list = [value for value in reduced_list if value != 0]\n",
+    "\n",
+    "    return np.array(reduced_list)\n",
+    "\n",
+    "\n",
+    "majority_vote_arr"
    ]
   }
  ],
