--- a/test.ipynb
+++ b/test.ipynb
@@ -2,313 +2,106 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "import scipy\n",
     "\n",
-    "def syllable_to_phrase_labels(arr, silence=0):\n",
-    "    new_arr = np.array(arr, dtype=int)\n",
-    "    current_syllable = None\n",
-    "    start_of_phrase_index = None\n",
-    "    first_non_silence_label = None  # To track the first non-silence syllable\n",
+    "class PSTNode:\n",
+    "    def __init__(self, label, children):\n",
+    "        \"\"\"\n",
+    "        Children list[PSTNode Objects]: \n",
+    "        \"\"\"\n",
+    "        self.label = label\n",
     "\n",
-    "    for i, value in enumerate(new_arr):\n",
-    "        if value != silence and value != current_syllable:\n",
-    "            if start_of_phrase_index is not None:\n",
-    "                new_arr[start_of_phrase_index:i] = current_syllable\n",
-    "            current_syllable = value\n",
-    "            start_of_phrase_index = i\n",
-    "            \n",
-    "            if first_non_silence_label is None:  # Found the first non-silence label\n",
-    "                first_non_silence_label = value\n",
-    "\n",
-    "    if start_of_phrase_index is not None:\n",
-    "        new_arr[start_of_phrase_index:] = current_syllable\n",
-    "\n",
-    "    # Replace the initial silence with the first non-silence syllable label\n",
-    "    if new_arr[0] == silence and first_non_silence_label is not None:\n",
-    "        for i in range(len(new_arr)):\n",
-    "            if new_arr[i] != silence:\n",
-    "                break\n",
-    "            new_arr[i] = first_non_silence_label\n",
-    "\n",
-    "    return new_arr\n",
-    "\n",
-    "# Example usage\n",
-    "arr = [0, 1, 0, 1, 0, 2, 0, 2, 3, 2, 3, 1, 0, 1, 0, 1]\n",
-    "new_arr = syllable_to_phrase_labels(arr)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        # a list of tuples, where the first item is the index of the child and the second item is the weight of the edge (p)\n",
+    "        self.children = children \n",
     "\n",
     "\n",
-    "def reduce_phrases(arr, remove_silence=True):\n",
-    "    current_element = arr[0]\n",
-    "    reduced_list = [] \n",
+    "class PSTTree():\n",
+    "    def __init__(self):\n",
+    "        # dictionary of nodes \n",
+    "        self.node_dict = {}\n",
     "\n",
-    "    for i, value in enumerate(arr):\n",
-    "        if value != current_element:\n",
-    "            reduced_list.append(current_element)\n",
-    "            current_element = value \n",
+    "    def add_children(self, parent, child, p):\n",
+    "        self.node_dict[parent].children.append((child,p))\n",
     "\n",
-    "        # append last phrase\n",
-    "        if i == len(arr) - 1:\n",
-    "            reduced_list.append(current_element)\n",
+    "    def add_node(self, label, node):\n",
+    "        self.node_dict[label] = node \n",
     "\n",
-    "    if remove_silence == True:\n",
-    "        reduced_list = [value for value in reduced_list if value != 0]\n",
-    "\n",
-    "    return np.array(reduced_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.io\n",
-    "\n",
-    "# Load the .mat file\n",
     "f = \"/home/george-vengrovski/Downloads/pst_data.mat\"\n",
     "mat_data = scipy.io.loadmat(f, struct_as_record=False, squeeze_me=True)\n",
+    "tree_data = mat_data['TREE']  \n",
     "\n",
-    "# Print the keys to see the top-level structure\n",
-    "print(mat_data.keys())\n",
+    "pst_tree = PSTTree()\n",
     "\n",
-    "# Inspect the 'TREE' structure (or the relevant key from the printout)\n",
-    "tree_data = mat_data['TREE']  # Adjust 'TREE' if the actual key differs\n",
-    "print(type(tree_data))\n",
-    "print(tree_data.shape)\n",
+    "# tree_data = tree_data[::-1]\n",
+    "for i, node in enumerate(tree_data):\n",
+    "    if i == 0:\n",
+    "        node = PSTNode(label=\"root\", children=[])\n",
+    "        pst_tree.add_node(label=\"root\", node=node)\n",
+    "    # remove the empty higher Nodes \n",
+    "    elif len(node.parent) == 0:\n",
+    "        continue\n",
+    "    else:\n",
+    "        for parent, label, p in zip(tree_data[i].parent[0], tree_data[i].label, tree_data[i].p):\n",
+    "            # first layer from root, special case \n",
+    "            if len(label) == 1:\n",
+    "                node = PSTNode(label=label, children=[])\n",
+    "                pst_tree.add_node(label=label, node=node)\n",
     "\n",
-    "# If 'TREE' is a structured array, inspect a single element\n",
-    "if hasattr(tree_data, 'dtype') and tree_data.size > 0:\n",
-    "    print(tree_data.dtype.names)  # This will show field names of the structure\n",
-    "    first_element = tree_data[0]  # Adjust indexing if necessary\n",
-    "    print(type(first_element))\n",
-    "    print(first_element)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TreeNode:\n",
-    "    def __init__(self, sequence, parent_index=None, parent_level=None):\n",
-    "        self.sequence = sequence\n",
-    "        self.parent_index = parent_index\n",
-    "        self.parent_level = parent_level\n",
-    "        self.children = []  # This will hold indices of child nodes\n",
-    "def construct_tree(tree_data):\n",
-    "    tree = [[] for _ in range(len(tree_data))]\n",
-    "    node_index_map = {}\n",
+    "                # and then previous index add children, parent will be root for all of them soooo\n",
+    "                pst_tree.add_children(parent=\"root\", child=label, p=p)\n",
     "\n",
-    "    for level_index, level in enumerate(tree_data):\n",
-    "        if hasattr(level, 'string') and hasattr(level, 'parent'):\n",
-    "            sequences = level.string\n",
-    "            parent_indices = level.parent\n",
-    "\n",
-    "            for seq_index, seq in enumerate(sequences):\n",
-    "                parent_info = parent_indices[seq_index] if seq_index < len(parent_indices) else None\n",
-    "                # First, check if parent_info is not None\n",
-    "                if parent_info is not None:\n",
-    "                    # Then, ensure parent_info has at least two elements\n",
-    "                    if isinstance(parent_info, (list, tuple, np.ndarray)) and len(parent_info) >= 2:\n",
-    "                        parent_index, parent_level = parent_info[:2]\n",
-    "                        # Further checks on parent_index and parent_level\n",
-    "                        if not (0 <= parent_level < level_index and 0 <= parent_index < len(tree[parent_level])):\n",
-    "                            print(f\"Invalid parent at Level {level_index}, Index {seq_index}: ({parent_level}, {parent_index})\")\n",
-    "                            parent_index, parent_level = None, None  # Reset invalid parent references\n",
-    "                    else:\n",
-    "                        parent_index, parent_level = None, None\n",
-    "                else:\n",
-    "                    parent_index, parent_level = None, None\n",
-    "\n",
-    "                node = TreeNode(sequence=seq, parent_index=parent_index, parent_level=parent_level)\n",
-    "                tree[level_index].append(node)\n",
-    "                node_index_map[(level_index, seq_index)] = len(tree[level_index]) - 1\n",
-    "\n",
-    "    # Link children to parents\n",
-    "    for level_index, nodes in enumerate(tree):\n",
-    "        for node_index, node in enumerate(nodes):\n",
-    "            if node.parent_index is not None and node.parent_level is not None:\n",
-    "                parent_node = tree[node.parent_level][node.parent_index]\n",
-    "                parent_node.children.append(node_index_map[(level_index, node_index)])\n",
-    "\n",
-    "    return tree\n",
-    "\n",
-    "# Assuming mat_data['TREE'] is loaded as before\n",
-    "tree = construct_tree(mat_data['TREE'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Print the overall structure of the tree\n",
-    "print(f\"Total levels in tree: {len(tree)}\")\n",
-    "for level_index, level in enumerate(tree):\n",
-    "    print(f\"Level {level_index} has {len(level)} nodes.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if len(tree) > 0 and len(tree[0]) > 0:  # Ensure there's at least one level and one node at the root level\n",
-    "    deep_nodes = find_deep_nodes(tree, 0, 0, 5)\n",
-    "else:\n",
-    "    print(\"Tree is empty or does not have a root node.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "min_depth = 4  # You're looking for nodes at least 4 levels deep, starting from level 1\n",
-    "\n",
-    "# Since there are no nodes at level 0, start from the first node at level 1\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_deep_nodes(tree, start_level, start_node_index, min_depth, current_depth=0):\n",
-    "    deep_nodes = []\n",
-    "\n",
-    "    # Ensure we don't go beyond the available levels in the tree\n",
-    "    if start_level + current_depth >= len(tree):\n",
-    "        return deep_nodes\n",
-    "\n",
-    "    # Get the starting node from the specified level and node index\n",
-    "    node = tree[start_level + current_depth][start_node_index]\n",
-    "\n",
-    "    # Check if the current node's depth meets the criteria\n",
-    "    if current_depth >= min_depth:\n",
-    "        deep_nodes.append((node, start_level + current_depth, start_node_index))\n",
-    "\n",
-    "    # Recursively search through the children of the current node\n",
-    "    for child_index in node.children:  # Assuming node.children contains integer indices\n",
-    "        # Calculate the child's level based on the current depth in the recursion\n",
-    "        child_level = start_level + current_depth + 1\n",
-    "        if child_level < len(tree):\n",
-    "            # Ensure child_index is an integer\n",
-    "            if isinstance(child_index, int):\n",
-    "                deep_nodes.extend(find_deep_nodes(tree, start_level, child_index, min_depth, current_depth + 1))\n",
     "            else:\n",
-    "                print(\"Child index is not an integer:\", child_index)\n",
+    "                old_states = label[1:]\n",
     "\n",
-    "    return deep_nodes\n",
+    "                node = PSTNode(label=label, children=[])\n",
+    "                pst_tree.add_node(label=label, node=node)\n",
     "\n",
-    "\n",
-    "# Parameters\n",
-    "min_depth = 4  # Looking for nodes at least 4 levels deep\n",
-    "start_level = 1  # Starting from the first level that has nodes\n",
-    "\n",
-    "# Ensure the starting level has nodes\n",
-    "if len(tree) > start_level and any(len(level) > 0 for level in tree[start_level:]):\n",
-    "    # Collect all deep nodes starting from each node at the starting level\n",
-    "    deep_nodes = []\n",
-    "    for start_node_index in range(len(tree[start_level])):\n",
-    "        deep_nodes.extend(find_deep_nodes(tree, start_level, start_node_index, min_depth))\n",
-    "\n",
-    "    # Print details about each deep node found\n",
-    "    for node, level, index in deep_nodes:\n",
-    "        print(f\"Deep Node at Level: {level}, Index: {index}, Sequence: {node.sequence}\")\n",
-    "else:\n",
-    "    print(\"The starting level does not have any nodes or is beyond the tree depth.\")\n"
+    "                # search for parents\n",
+    "                pst_tree.add_children(parent=old_states, child=label, p=p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pst_tree_visualization.png'"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from graphviz import Digraph\n",
     "\n",
-    "def visualize_tree_with_limit(tree, max_depth, graph=None, current_level=0, node_index=None, parent_id=None, node_id_prefix=''):\n",
-    "    if graph is None:\n",
-    "        graph = Digraph(comment='PST Limited Depth', format='png')\n",
-    "        graph.attr(size='10,10!', dpi='300', rankdir='TB', nodesep='0.5', ranksep='1')  # Adjust spacing between nodes\n",
+    "def visualize_pst_tree(pst_tree):\n",
+    "    dot = Digraph(comment='Probabilistic Suffix Tree')\n",
     "\n",
-    "    if current_level > max_depth:\n",
-    "        return graph\n",
+    "    # Add nodes\n",
+    "    for label, node in pst_tree.node_dict.items():\n",
+    "        dot.node(label, label)\n",
     "\n",
-    "    if node_index is None:\n",
-    "        for index, node in enumerate(tree[0]):  # Start from the root level\n",
-    "            visualize_tree_with_limit(tree, max_depth, graph, 1, index, 'Root', f'0_{index}')\n",
-    "    else:\n",
-    "        node = tree[current_level][node_index]\n",
-    "        node_id = f'{node_id_prefix}_{current_level}_{node_index}'\n",
-    "        node_label = ','.join(map(str, node.sequence)) if node.sequence else 'ε'\n",
-    "        \n",
-    "        # Adjust the font size and shape for better fit\n",
-    "        graph.node(node_id, label=node_label, shape='ellipse', fontsize='10', width='0.2', height='0.2')\n",
+    "    # Add edges\n",
+    "    for label, node in pst_tree.node_dict.items():\n",
+    "        for child_label, p in node.children:\n",
+    "            # Ensure child exists in node_dict before adding edge\n",
+    "            if child_label in pst_tree.node_dict:\n",
+    "                dot.edge(label, child_label, label=f'p={p}')\n",
     "\n",
-    "        if parent_id is not None:\n",
-    "            graph.edge(parent_id, node_id, fontsize='8')\n",
+    "    return dot\n",
     "\n",
-    "        for child_index in node.children:\n",
-    "            child_level = current_level + 1\n",
-    "            if child_level < len(tree):\n",
-    "                visualize_tree_with_limit(tree, max_depth, graph, child_level, child_index, node_id, node_id)\n",
-    "\n",
-    "    return graph\n",
-    "\n",
-    "max_depth = 3  # Adjust based on your tree's depth and complexity\n",
-    "graph_limited = visualize_tree_with_limit(tree, max_depth)\n",
-    "output_path_limited = graph_limited.render('pst_limited_depth_visualization')\n",
-    "print(f\"Tree visualization (up to depth {max_depth}) saved to {output_path_limited}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Load the spectrogram from the given file path\n",
-    "f = np.load(\"files/test/llb3_3568_2018_05_01_15_13_26.wav.npz\", allow_pickle=True)\n",
-    "\n",
-    "# Extract the spectrogram data\n",
-    "spectrogram = f['s']\n",
-    "\n",
-    "# Plotting the spectrogram\n",
-    "plt.figure(figsize=(300, 40))\n",
-    "plt.imshow(spectrogram, aspect='auto', origin='lower')\n",
-    "plt.title('Spectrogram')\n",
-    "plt.ylabel('Frequency Bin')\n",
-    "plt.xlabel('Time Frame')\n",
-    "plt.colorbar(label='Intensity')\n",
-    "\n",
-    "# Save the plot as an EPS file\n",
-    "plt.savefig('spectrogram.png', format='png')\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()"
+    "# Visualize the tree\n",
+    "dot = visualize_pst_tree(pst_tree)\n",
+    "dot.render('pst_tree_visualization', view=True, format='png')  # Adjust the path as needed\n"
    ]
   },
   {
@@ -340,6 +133,32 @@
     "# with your actual file path\n",
     "file_path = '/home/george-vengrovski/Documents/projects/tweety_bert_paper/hdbscan_labels.txt'\n",
     "replace_integers_with_letters(file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['s', 'labels', 'song']\n",
+      "[0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "f = \"/home/george-vengrovski/Downloads/5177_songs_npz_files/USA5177_45268.29211546_12_8_8_6_51.npz\"\n",
+    "\n",
+    "f = np.load(f)\n",
+    "\n",
+    "print(f.files)\n",
+    "\n",
+    "print(np.unique(f[\"song\"]))"
    ]
   }
  ],
