updates to linear probe and tweety net analysis

--- a/test.ipynb
+++ b/test.ipynb
@@ -217,6 +217,36 @@
     "file_path = \"/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/umap_dict_file.npz\"\n",
     "plot_spectrogram_with_labels(file_path)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['s']\n",
+      "(513, 6362)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "f = \"/media/george-vengrovski/disk2/canary_temp/llb3_data_matrices/llb3_data_matrices/llb3_0010_2018_04_23_15_03_45.wav.npz\"\n",
+    "\n",
+    "f = np.load(f, allow_pickle=True)\n",
+    "print(f.files)\n",
+    "\n",
+    "\n",
+    "f = \"/media/george-vengrovski/disk2/canary_temp/canary_spec/llb3_0002_2018_04_23_14_18_03.npz\"\n",
+    "\n",
+    "f = np.load(f, allow_pickle=True)\n",
+    "print(f[\"s\"].shape)"
+   ]
   }
  ],
  "metadata": {
