--- a/test.ipynb
+++ b/test.ipynb
@@ -2,14 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['embStartEnd', 'embVals', 'behavioralArr', 'mean_colors_per_minispec', 'colors_per_timepoint']\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/umap_dict_file.npz'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m f \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/umap_dict_file.npz\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m f \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mload(f, allow_pickle\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m      7\u001b[0m spec \u001b[39m=\u001b[39m f[\u001b[39m\"\u001b[39m\u001b[39mbehavioralArr\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m      8\u001b[0m labels \u001b[39m=\u001b[39m f[\u001b[39m\"\u001b[39m\u001b[39mcolors_per_timepoint\u001b[39m\u001b[39m\"\u001b[39m]\n",
+      "File \u001b[0;32m~/anaconda3/envs/tweetybert/lib/python3.11/site-packages/numpy/lib/npyio.py:405\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    403\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m    404\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 405\u001b[0m     fid \u001b[39m=\u001b[39m stack\u001b[39m.\u001b[39menter_context(\u001b[39mopen\u001b[39m(os_fspath(file), \u001b[39m\"\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m    406\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    408\u001b[0m \u001b[39m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/george-vengrovski/Documents/projects/tweety_bert_paper/files/umap_dict_file.npz'"
      ]
     }
    ],
@@ -220,15 +225,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['s']\n",
-      "(513, 6362)\n"
+      "['embedding_outputs', 'hdbscan_labels', 'ground_truth_labels']\n"
      ]
     }
    ],
@@ -236,16 +240,10 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "f = \"/media/george-vengrovski/disk2/canary_temp/llb3_data_matrices/llb3_data_matrices/llb3_0010_2018_04_23_15_03_45.wav.npz\"\n",
+    "f = \"files/labels_cmap_test.npz\"\n",
     "\n",
     "f = np.load(f, allow_pickle=True)\n",
-    "print(f.files)\n",
-    "\n",
-    "\n",
-    "f = \"/media/george-vengrovski/disk2/canary_temp/canary_spec/llb3_0002_2018_04_23_14_18_03.npz\"\n",
-    "\n",
-    "f = np.load(f, allow_pickle=True)\n",
-    "print(f[\"s\"].shape)"
+    "print(f[\"embedding_outputs\"])\n"
    ]
   }
  ],
